--- a/Akriti Chaturvedi HTML DAY3/bank.html
+++ b/Akriti Chaturvedi HTML DAY3/bank.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Bootstrap Example</title>
+        <title>Bank Account Opening</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -77,7 +77,7 @@
                     <input type="checkbox" class="custom-control-input" id="customCheck1">
                     <label class="custom-control-label" for="customCheck1">All the information provided is true and i accept the terms and conditions</label>
                   </div>
-                  <input type="submit">
+                  <input type="button" value="Submit">
                 </div>
 
 
